# cpp-segment

./: CMakeLists.txt  README.md
GetCPUID/: GetMachineID.cpp  main.cpp
GetMachineInfo/: CMakeLists.txt  GetMachineID.h  README.md
pointcloud_tools/: CMakeLists.txt
pointcloud_tools/Fastfusion_tools/: CMakeLists.txt  mesh2ply.cpp
